Review Pret pour présenter

--- a/src/Couture/ClientBundle/Resources/views/Client/index.html.twig
+++ b/src/Couture/ClientBundle/Resources/views/Client/index.html.twig
@@ -65,8 +65,8 @@
         <tr>
             <!--th>Id</th-->
             <th>Nom</th>
-            <th>Prenom</th>
-            <th>Telephone</th>
+            <th>Prénom</th>
+            <th>Téléphone</th>
             <th>Email</th>
             <th>Adresse</th>
             <!--th>Datec</th>
