--- a/src/Couture/CoutureBundle/Resources/views/Couture/show.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Couture/show.html.twig
@@ -98,7 +98,7 @@
                                 <p class="control-group">
                                     <label class="control-label">Prix</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.prix }}</span>            
+                                        <span class="">{{ entity.prix|number_format(0, ',',' ') }} F CFA</span>            
                                     <!--/div-->
                                 </p>    
                                 <p class="control-group">
@@ -134,61 +134,61 @@
                                 <p class="control-group">
                                     <label class="control-label">Cou</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.mesure.cou }}</span>            
+                                        <span class="">{{ entity.mesure.cou }} cm</span>            
                                     <!--/div-->
                                 </p>
                                 <p class="control-group">
                                     <label class="control-label">Poitrine</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.mesure.poitrine }}</span>            
+                                        <span class="">{{ entity.mesure.poitrine }} cm</span>            
                                     <!--/div-->
                                 </p>    
                                 <p class="control-group">
                                     <label class="control-label">Taille</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.mesure.taille }}</span>            
+                                        <span class="">{{ entity.mesure.taille }} cm</span>            
                                     <!--/div-->
                                 </p>
                                 <p class="control-group">
                                     <label class="control-label">Longueur Chemise</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.mesure.longChemise }}</span>            
+                                        <span class="">{{ entity.mesure.longChemise }} cm</span>            
                                     <!--/div-->
                                 </p>
                                 <p class="control-group">
                                     <label class="control-label">Longueur Pantalon</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.mesure.longPantalon }}</span>            
+                                        <span class="">{{ entity.mesure.longPantalon }} cm</span>            
                                     <!--/div-->
                                 </p>
                                 <p class="control-group">
                                     <label class="control-label">Ceinture</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.mesure.ceinture }}</span>            
+                                        <span class="">{{ entity.mesure.ceinture }} cm</span>            
                                     <!--/div-->
                                 </p>    
                                 <p class="control-group">
                                     <label class="control-label">Longueur Robe</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.mesure.longRobe }}</span>            
+                                        <span class="">{{ entity.mesure.longRobe }} cm</span>            
                                     <!--/div-->
                                 </p>
                                 <p class="control-group">
                                     <label class="control-label">Manche</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.mesure.manche }}</span>            
+                                        <span class="">{{ entity.mesure.manche }} cm</span>            
                                     <!--/div-->
                                 </p>
                                 <p class="control-group">
                                     <label class="control-label">Hanche</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.mesure.hanche }}</span>            
+                                        <span class="">{{ entity.mesure.hanche }} cm</span>            
                                     <!--/div-->
                                 </p>
                                 <p class="control-group">
                                     <label class="control-label">Epaule</label>
                                     <!--div class=""-->
-                                        <span class="">{{ entity.mesure.epaule }}</span>            
+                                        <span class="">{{ entity.mesure.epaule }} cm</span>            
                                     <!--/div-->
                                 </p>
                                 
