--- a/src/Couture/CoutureBundle/Resources/views/Modele/show.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Modele/show.html.twig
@@ -21,11 +21,11 @@
             <label class="control-label">Id</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.id }}</span>            </div>
         </div-->        <div class="control-group">
-            <label class="control-label">Libelle</label>
+            <label class="control-label">Libellé</label>
             <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.libelle }}</span>            </div>
         </div>        <div class="control-group">
             <label class="control-label">Description</label>
-            <div class="controls">                <span class="">pour bcp plus de détails comme test {{ entity.description }}</span>            </div>
+            <div class="controls">                <span class=""> {{ entity.description }}</span>            </div>
         </div>        <div class="control-group">
             </div>        <div class="control-group">
             <label class="control-label">Catégorie</label>
