--- a/src/Couture/FacturationBundle/Resources/views/Facture/show.html.twig
+++ b/src/Couture/FacturationBundle/Resources/views/Facture/show.html.twig
@@ -87,21 +87,27 @@
                                 <!--/div-->
                             </p>
                             <p class="control-group">
+                                <label class="control-label">Quantité</label>
+                                <!--div class=""-->
+                                <span class="">{% if entity.quantite %}{{ entity.quantite }} {% else %}  1 {% endif %}</span>            
+                                <!--/div-->
+                            </p>
+                            <p class="control-group">
                                 <label class="control-label">Désignation</label>
                                 <!--div class=""-->
-                                <span class="">{% if entity.quantite %}{{ entity.quantite }} {% else %}  1 {% endif %} : {{ entity.couture.infosCouture }}</span>            
+                                <span class="">{{ entity.couture.infosCouture }}</span>            
                                 <!--/div-->
                             </p>
                             <p class="control-group">
                                 <label class="control-label">Prix</label>
                                 <!--div class=""-->
-                                <span class="">{% if entity.quantite %}{{ entity.quantite * entity.couture.prix}} {% else %} {{ entity.couture.prix }} {% endif %}</span>            
+                                <span class="">{% if entity.quantite %}{{ entity.quantite * entity.couture.prix}} {% else %} {{ entity.couture.prix }} {% endif %} F CFA</span>            
                                 <!--/div-->
                             </p>    
                             <p class="control-group">
                                 <label class="control-label">Avance</label>
                                 <!--div class=""-->
-                                <span class="">{{ entity.avance }}</span>            
+                                <span class="">{{ entity.avance|number_format(0, ',',' ')  }} F CFA</span>            
                                 <!--/div-->
                             </p>
                             <!--p class="control-group">
@@ -134,20 +140,20 @@
                 <tr>
                     <td>{% if entity.quantite %}{{ entity.quantite }} {% else %} 1 {% endif %}</td>
                     <td> {{ entity.couture.modele.libelle }} </td>
-                    <td> {{ entity.couture.prix }} FCFA</td>
+                    <td> {{ entity.couture.prix|number_format(0, ',',' ')  }} FCFA</td>
                     <td>{% if entity.quantite %}{{ entity.couture.prix * entity.quantite }} {% else %} {{ entity.couture.prix * 1}} {% endif %}  FCFA</td>
                 </tr>
                 <tr>
                     <td></td>
                     <td>Avance</td>
                     <td></td>
-                    <td>{{ entity.avance }}</td>
+                    <td>{{ entity.avance|number_format(0, ',',' ')  }} F CFA</td>
                 </tr>
                 <tr>
                     <td></td>
                     <td>NET à payer</td>
                     <td></td>
-                    <td id="net-a-payer" data-reste="{% if entity.quantite %}{{ entity.couture.prix * entity.quantite - entity.avance }} {% else %} {{ entity.couture.prix - entity.avance }} {% endif %}">{% if entity.quantite %}{{ entity.couture.prix * entity.quantite - entity.avance }} {% else %} {{ entity.couture.prix - entity.avance }} {% endif %} FCFA</td>
+                    <td id="net-a-payer" data-reste="{% if entity.quantite %}{{ (entity.couture.prix * entity.quantite - entity.avance)  }} {% else %} {{ (entity.couture.prix - entity.avance) }} {% endif %}">{% if entity.quantite %}{{ (entity.couture.prix * entity.quantite - entity.avance)|number_format(0, ',',' ')  }} {% else %} {{ (entity.couture.prix - entity.avance)|number_format(0, ',',' ')  }} {% endif %} F CFA</td>
                 </tr>
             </table>
             <hr>
@@ -159,7 +165,7 @@
                 <div class="row">
     <div class="span12 classe-masquee">
         <div class="panel panel-danger">
-            <div class="panel-heading"><h3 class="panel-title">Reste à payer : <span class="badge">{% if entity.quantite %}{{ entity.couture.prix * entity.quantite - entity.avance }} {% else %} {{ entity.couture.prix - entity.avance }} {% endif %}</span></h3></div>
+            <div class="panel-heading"><h3 class="panel-title">Reste à payer : <span class="badge">{% if entity.quantite %}{{ (entity.couture.prix * entity.quantite - entity.avance)|number_format(0, ',',' ')  }} {% else %} {{ (entity.couture.prix - entity.avance)|number_format(0, ',',' ')  }} {% endif %} F CFA</span></h3></div>
 
 
         </div>
