--- a/src/Couture/TailleurBundle/Resources/views/Tailleur/dashboard.html.twig
+++ b/src/Couture/TailleurBundle/Resources/views/Tailleur/dashboard.html.twig
@@ -1,22 +1,75 @@
 {% extends "::base.html.twig" %}
 
 {% block page  %}
-    <table>
+    <!--table>
         <tr>
             <th> #</th>
             <th> date</th>
             <th> nombre de couture </th>
         </tr>
-        {% for key, couture in coutures %}
+        {#% for key, couture in coutures %}
             <tr>
                 <td> {{ key + 1 }}</td>
-                <td> {{ couture.valeur|date('d M Y') }} </td>
+                <td> {{ couture.valeur|date('D M Y') }} </td>
                 <td> {{ couture.nb }}</td>
             </tr>
-        {% endfor %}
-    </table>
+        {% endfor %#}
+        
+    </table-->
 
     <div>
+        <table id='myTable1'>
+            <caption>Nombre de coutures</caption>
+            <thead>
+                <tr>
+                    <th></th>
+                    {#% for key, couture in coutures %}
+                    <th> {{ couture.valeur|date('M') }} </th>
+                    {% endfor %#}
+                    <th>Jan</th>
+                    <th>Fév</th>
+                    <th>Mar</th>
+                    <th>Avr</th>
+                    <th>Mai</th>
+                    <th>Juin</th>
+                    <th>Jul</th>
+                    <th>Aou</th>
+                    <th>Sep</th>
+                    <th>Oct</th>
+                    <th>Nov</th>
+                    <th>Dec</th>
+                    
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    
+                    <th> {{("now"|date('Y'))}} </th>
+                    {% for key, couture in coutures %}
+                    <td>{{ couture.nb }}</td>
+                    {% endfor %}
+                </tr>
+                <!--tr>
+                    <th>2009</th>
+                    <td>1167</td>
+                    <td>1110</td>
+                    <td>691</td>
+                    <td>165</td>
+                    <td>135</td>
+                    <td>157</td>
+                    <td>139</td>
+                    <td>136</td>
+                    <td>938</td>
+                    <td>1120</td>
+                    <td>55</td>
+                    <td>55</td>
+                </tr-->
+            </tbody>
+        </table>
+
+    </div>
+    
+    <!--div>
         <table id='myTable1'>
             <caption>Nombre de coutures</caption>
             <thead>
@@ -70,7 +123,7 @@
             </tbody>
         </table>
 
-    </div>
+    </div-->
     
     
 
